--- a/Computational Statistics/TP1/Mathis_LeBail_TP1_Computational_Statistics.ipynb
+++ b/Computational Statistics/TP1/Mathis_LeBail_TP1_Computational_Statistics.ipynb
@@ -19,7 +19,8 @@
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.preprocessing import Normalizer"
+    "from sklearn.preprocessing import Normalizer\n",
+    "#Libraries"
    ]
   },
   {
